--- a/src/Components/UsernameModal/usernameModal.css
+++ b/src/Components/UsernameModal/usernameModal.css
@@ -2,10 +2,6 @@
     display: flex; 
     justify-content: center;
     height: 100vh;
-    background-color: #e3e3f1;
-    background-image:  radial-gradient(#f33 2px, transparent 2px), radial-gradient(#f33 2px, #e5e5f7 2px);
-    background-size: 80px 80px;
-    background-position: 0 0,40px 40px;
     z-index: 998;
 }
 
@@ -15,7 +11,7 @@
     align-self: center;
     align-items: center;
     border: 2px solid black;
-    background-color: #e3e3f1;
+    background: rgba(240, 240, 252, 0.582);
     padding: 5px;
 }
   
