--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,13 @@
 input{
   border: 1px solid black;
   border-radius: 10px;
-  padding: 5px;
-  margin: 5px;
-  resize: none;
+  padding: 8px;
+  margin: 8px;
   outline: none;
 }
 
 body{
-  background-color: #80cee1;
+  background-color: whitesmoke;
 }
 
 
