--- a/src/Components/Register/register.module.css
+++ b/src/Components/Register/register.module.css
@@ -8,13 +8,13 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        height: 50vh;
+        height: 50%;
         text-align: center;
         padding: 8px;
         border: 1px solid black;
         box-shadow: 10px 10px hsl(0, 5%, 15%);
         gap: 8px;
-        background-color: #e2dccc;
+        background-color: #fbfef7;
         & input{
             width: 25vw;
             padding: 8px;
@@ -25,7 +25,10 @@
             background: none;
         }
         & button{
-            padding: 4px;
+            padding: 8px;
+            border: none;
+            border-radius: 16px;
+            background-color: #06a98f;
         }
     }
 }
