--- a/src/Components/Modal/modal.module.css
+++ b/src/Components/Modal/modal.module.css
@@ -55,4 +55,16 @@
     }
 }
 
+@media(max-width: 480px){
+    .modalContainer{
+        grid-template-columns: .3fr .9fr;
+        box-shadow: 8px 8px hsl(0, 5%, 15%);
+    }
+}
+
+@media(max-width: 360px){
+    .modalContainer{
+        grid-template-columns: .3fr .7fr;
+    }
+}
 
